--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">TrabajoFinalV2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="instrucciones">Sigue estos pasos para recuperar tu contraseña:\n\n
+            1.Introduce tu dirección de correo electrónico\n
+            2.Recibirás un email con un código de verificación\n
+            3.Escribe el código enviado\n
+            4.Si no has recibido el correo, pulsa en “Volver a enviar</string>
 </resources>
